--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Collaborations</title>
 </head>
 
 <body>
+    <h1>Hello World</h1>
     <h1>Nama Anggota Kelompok</h1>
 
     <p>Maulana Rosandy</p>
+    <p>Moch Fajrul Falah</p>
   
   
 </body>
